--- a/index.html
+++ b/index.html
@@ -27,27 +27,21 @@
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./module-one-challenge/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization image with SEO key topics on notebook." />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </div>
 
 
         <div id="online-reputation-management" class="online-reputation-management" alt="Image of laptop and graphs" >
             <img src="./module-one-challenge/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </div>
 
 
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./module-one-challenge/images/social-media-marketing.jpg" class="float-left" alt="Image of conference table in use and social media references on it." />
             <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </div>
     </div>
 
@@ -56,36 +50,28 @@
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./module-one-challenge/images/lead-generation.png" alt="Transparent background image"/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </div>
 
 
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./module-one-challenge/images/brand-awareness.png" alt="Transparent background image" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </div>
 
 
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./module-one-challenge/images/cost-management.png" alt="Transparent background image"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </div>
     </div>
 
     
     <div id=".footer" class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
+        <p> &copy; 2023 Horiseon Social Solution Services, Inc.</p>
     </div>
 </body>
 
