--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div  class="search-engine-optimization">
             <img src="./module-one-challenge/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization image with SEO key topics on notebook." />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
